@@ -120,6 +120,7 @@
 #define FILENAME_COLS	19
 
 #define MIN_VIEW_HEIGHT 4
+#define MIN_VIEW_WIDTH  4
 
 #define NULL_ID		"0000000000000000000000000000000000000000"
 
